--- a/wp-content/themes/govintranetpress/scss/content/annual_leave/_main.scss
+++ b/wp-content/themes/govintranetpress/scss/content/annual_leave/_main.scss
@@ -9,6 +9,7 @@
 
     h3 {
       margin-top: 10px;
+      margin-bottom: 14px;
     }
 
     a {
